Criação do topo da página.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,42 @@
         </nav>
     </header>
 
+    <section id="home"> <!--Inicio da seção home-->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 d-flex"><!--Textos da seção-->
+                    <div class="align-self-center">
+                        <h1 class="display-4">Suas compras, descomplicadas</h1>
+                        <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vel pellentesque dolor, nec efficitur leo. Donec eu ex sagittis, commodo velit eget, iaculis diam. Phasellus auctor rhoncus erat eget congue.</p>
+
+                        <form class="mt-4 mb-4">
+                            <div class="input-group input-group-lg">
+                                <Input type="text" placeholder="Seu e-mail" class="form-control">
+                                <div class="input-group-append">
+                                    <button type="button" class="btn btn-primary">Cadastre-se</button>
+                                </div>
+                            </div>
+                        </form>
+
+                        <p class="mt-4 mb-4">Disponivel para 
+                            <a href="" class="btn btn-outline-light">
+                                <i class="fa-brands fa-android fa-lg"></i>  
+                            </a>
+                            <a href="" class="btn btn-outline-light">
+                                <i class="fa-brands fa-apple fa-lg"></i>
+                            </a>
+                        </p>
+
+                    </div>
+                </div><!--fim Textos da seção-->
+                <div class="col-md-6 d-none d-md-block">
+                    <img src="img/capa-mulher.png">
+                </div>
+            </div>
+
+        </div>
+    </section><!--Inicio da seção home-->
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
