implementação do corpo do site.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </nav>
     </header>
 
-    <section id="home"> <!--Inicio da seção home-->
+    <section id="home"> <!--inicio da seção home-->
         <div class="container">
             <div class="row">
                 <div class="col-md-6 d-flex"><!--Textos da seção-->
@@ -84,7 +84,86 @@
             </div>
 
         </div>
-    </section><!--Inicio da seção home-->
+    </section><!--fim da seção home-->
+
+    <section class="caixa"><!--inicio da seção finas-->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 d-flex">
+                    <div class="align-self-center">
+                        <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vel pellentesque dolor, nec efficitur leo. Donec eu ex sagittis, commodo velit eget, iaculis diam. Phasellus auctor rhoncus erat eget congue. Ut finibus justo sit amet massa suscipit, ac finibus neque tempor.</p>
+                    </div>
+                </div>
+                <div class="col-md-6 d-none d-md-block">
+                    <img src="img/saiba.png" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </section><!--fim da seção finas-->
+
+    <section class="caixa"><!--inicio da seção jurus-->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 d-none d-md-block">
+                    <img src="img/facil.png" class="img-fluid">
+                </div>
+                <div class="col-md-6 d-flex">
+                    <div class="align-self-center">
+                        <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vel pellentesque dolor, nec efficitur leo. Donec eu ex sagittis, commodo velit eget, iaculis diam. Phasellus auctor rhoncus erat eget congue. Ut finibus justo sit amet massa suscipit, ac finibus neque tempor.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section><!--fim da seção jurus-->
+
+    <section class="caixa" ><!--inicio da seção recursos-->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="img/suporte.png" class="img-fluid d-none d-md-block">
+                    <h3>Aliquam consequat dictum</h3>
+                    <p>
+                        Fusce vel pellentesque dolor, nec efficitur leo. Donec eu ex sagittis, commodo velit eget, iaculis diam. Phasellus auctor rhoncus erat eget congue.
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <img src="img/facil.png" class="img-fluid d-none d-md-block">
+                    <h3>Aliquam consequat dictum</h3>
+                    <p>
+                        Fusce vel pellentesque dolor, nec efficitur leo. Donec eu ex sagittis, commodo velit eget, iaculis diam. Phasellus auctor rhoncus erat eget congue.
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <img src="img/economize.png" class="img-fluid d-none d-md-block">
+                    <h3>Aliquam consequat dictum</h3>
+                    <p>
+                        Fusce vel pellentesque dolor, nec efficitur leo. Donec eu ex sagittis, commodo velit eget, iaculis diam. Phasellus auctor rhoncus erat eget congue.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section><!--inicio da seção recursos-->
+    
+    <footer class="mt-4 mb-4"><!--inicio do rodapé-->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8">
+                    <p>
+                        <a href="#">Home</a>
+                        <a href="">Recursos</a>                 
+                        <a href="">Benefícios</a>
+                        <a href="">Preços</a>
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    teste 02
+                </div>
+            </div>
+
+        </div>
+    </footer><!--fim do rodapé-->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
