--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </div>
     </section><!--inicio da seção recursos-->
     
-    <footer class="mt-4 mb-4"><!--inicio do rodapé-->
+    <footer class="pt-4 pb-5 "><!--inicio do rodapé-->
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
@@ -157,9 +157,15 @@
                         <a href="">Preços</a>
                     </p>
                 </div>
-                <div class="col-md-4">
-                    teste 02
+                <div class="col-md-4 d-flex justify-content-end">
+                    <a href="" class="btn btn-outline-dark ml-2"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="" class="btn btn-outline-dark ml-2"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="" class="btn btn-outline-dark ml-2"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="" class="btn btn-outline-dark ml-2"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
+            </div>
+            <div class="d-flex justify-content-start mt-5" >
+                <p><i class="fa-regular fa-copyright"></i> Todos os direitos reservados. 2023</p>
             </div>
 
         </div>
