--- a/index.html
+++ b/index.html
@@ -16,17 +16,15 @@
   </head>
   <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-light bg-warning">
+        <nav class="navbar navbar-expand-lg navbar-light bg-warning">
             <div class="container">
                 <a href="#" class="navbar-brand">
                     <img src="img/logo.png" width="142">
                 </a>
-
-                <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-principal">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                
-                <div class="collape navbar-collapse" id="nav-principal">
+                <div class="collapse navbar-collapse" id="nav-principal">
                     <ul class="navbar-nav ml-auto" >
                         <li class="nav-item">
                             <a href="#" class="nav-link">Home</a>
@@ -56,10 +54,10 @@
                 <div class="col-md-6 d-flex"><!--Textos da seção-->
                     <div class="align-self-center">
                         <h1 class="display-4">Suas compras, descomplicadas</h1>
-                        <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vel pellentesque dolor, nec efficitur leo. Donec eu ex sagittis, commodo velit eget, iaculis diam. Phasellus auctor rhoncus erat eget congue.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vel pellentesque dolor, nec efficitur leo. Donec eu ex sagittis, commodo velit eget, iaculis diam. Phasellus auctor rhoncus erat eget congue.</p>
 
                         <form class="mt-4 mb-4">
-                            <div class="input-group input-group-lg">
+                            <div class="input-group input-group-md">
                                 <Input type="text" placeholder="Seu e-mail" class="form-control">
                                 <div class="input-group-append">
                                     <button type="button" class="btn btn-primary">Cadastre-se</button>
