Ajustando o input de cadastro

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 d-flex"><!--Textos da seção-->
-                    <div class="align-self-center mr-4">
+                    <div class="align-self-center">
                         <h1 class="display-4">Suas compras, descomplicadas</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vel pellentesque dolor, nec efficitur leo. Donec eu ex sagittis, commodo velit eget, iaculis diam. Phasellus auctor rhoncus erat eget congue.</p>
 
                         <form class="mt-4 mb-4" >
                             <div class="input-group input-group-md">
                                 <Input type="text" placeholder="Seu e-mail" class="form-control">
-                                <div class="input-group-append">
+                                <div class="input-group-append pr-4">
                                     <button type="button" class="btn btn-primary">Cadastre-se</button>
                                 </div>
                             </div>
