--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
             <div class="row">
                 <div class="col-md-6 d-flex"><!--Textos da seção-->
                     <div class="align-self-center">
-                        <h1 class="display-4">Suas compras, descomplicadas</h1>
+                        <h1 class="display-4  d-none d-sm-block">Suas compras, descomplicadas</h1>
+                        <h1 class="d-block d-sm-none">Suas compras, descomplicadas</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vel pellentesque dolor, nec efficitur leo. Donec eu ex sagittis, commodo velit eget, iaculis diam. Phasellus auctor rhoncus erat eget congue.</p>
 
                         <form class="mt-4 mb-4" >
@@ -163,7 +164,7 @@
                 </div>
             </div>
             <div class="d-flex justify-content-start mt-5" >
-                <p><i class="fa-regular fa-copyright"></i> Todos os direitos reservados. 2023</p>
+                <p><small><i class="fa-regular fa-copyright"></i> Todos os direitos reservados. 2023</small></p>
             </div>
 
         </div>
