--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <a href="" class="nav-link">Preços</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="btn btn-outline-light ml-4">Entrar</a>
+                            <a href="" class="btn btn-outline-light">Entrar</a>
                         </li>
                     </ul>
                 </div>
