Criação de linhas divisorias para seção recursos para mobile.

--- a/index.html
+++ b/index.html
@@ -126,13 +126,17 @@
                     <p>
                         Fusce vel pellentesque dolor, nec efficitur leo. Donec eu ex sagittis, commodo velit eget, iaculis diam. Phasellus auctor rhoncus erat eget congue.
                     </p>
-                </div>
+                    <hr class="d-md-none d-lg-block">
+
+                </div lass="img-fluid d-none d-md-block">
                 <div class="col-md-4">
                     <img src="img/facil.png" class="img-fluid d-none d-md-block">
                     <h3>Aliquam consequat dictum</h3>
                     <p>
                         Fusce vel pellentesque dolor, nec efficitur leo. Donec eu ex sagittis, commodo velit eget, iaculis diam. Phasellus auctor rhoncus erat eget congue.
                     </p>
+                    <hr class="d-md-none d-lg-block">
+
                 </div>
                 <div class="col-md-4">
                     <img src="img/economize.png" class="img-fluid d-none d-md-block">
