Alterando a linha hr

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <p>
                         Fusce vel pellentesque dolor, nec efficitur leo. Donec eu ex sagittis, commodo velit eget, iaculis diam. Phasellus auctor rhoncus erat eget congue.
                     </p>
-                    <hr class="d-md-none d-lg-block">
+                    <hr class="d-block d-sm-none">
 
                 </div lass="img-fluid d-none d-md-block">
                 <div class="col-md-4">
@@ -135,7 +135,7 @@
                     <p>
                         Fusce vel pellentesque dolor, nec efficitur leo. Donec eu ex sagittis, commodo velit eget, iaculis diam. Phasellus auctor rhoncus erat eget congue.
                     </p>
-                    <hr class="d-md-none d-lg-block">
+                    <hr class="d-block d-sm-none">
 
                 </div>
                 <div class="col-md-4">
